--- a/images/templates/base.html
+++ b/images/templates/base.html
@@ -15,6 +15,7 @@
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
     {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/images.css' %}">
   {% endblock %}
 </head>
 <body>
