--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -25,12 +25,16 @@
          
           <!-- Links -->
       
-          <form class="form-inline">
-            <div class="col-sm-4 col-md-4 navbar-right">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <div class="col-sm-4 col-md-4 navbar-right">
+              <form class="navbar-form" role="search" action="{% url 'search_results'%}">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search Image" name="image">
+                  <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>search</button>
+                  </div>
+                </div>
+              </form>
             </div>
-          </form>
-        </div>
         <!-- Collapsible content -->
       
       </nav>
