--- a/images/static/css/images.css
+++ b/images/static/css/images.css
@@ -14,4 +14,12 @@
 
 .hover:hover img {
   opacity: 0.7;
-}  
+}
+img {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden; 
+} 
