--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark default-color">
 
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="#">Gallery</a>
+        <a class="navbar-brand" href="{% url 'Images' %}" style="font-size:28px;">Gallery</a>
       
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
