--- a/images/static/css/images.css
+++ b/images/static/css/images.css
@@ -23,3 +23,28 @@ img {
     transition: .5s ease;
     backface-visibility: hidden; 
 } 
+.modal {
+    top:10%;
+    right:50px;
+    outline: none;
+  }
+.modal-header,.modal-footer {
+      /* padding:9px 15px; */
+      border-top: 1px;
+      border-bottom:1px;
+      background-color:black;
+      background-color: rgba(0,0,0, 0.9);
+  
+      /* -webkit-border-top-left-radius: 5px;
+      -webkit-border-top-right-radius: 5px;
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 5px;
+       border-top-left-radius: 5px;
+       border-top-right-radius: 5px; */
+   }
+.modal-body{
+    background-color: black;
+    background-color: rgba(0,0,0, 0.9);
+  
+  
+  }
