--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -25,7 +25,7 @@
          
           <!-- Links -->
       
-          <div class="col-sm-4 col-md-4 navbar-right">
+          <div class="col-sm-4 col-md-4 " style="margin-left: 600px;">
               <form class="navbar-form" role="search" action="{% url 'search_results'%}">
                 <div class="input-group">
                   <input type="text" class="form-control" placeholder="Search Image" name="image">
